log
Thu 28 Mar 2024 09:49:41 PM UTC: 
 tests:  0|6
total_score: 0/70
b7c1bb3
Thu 28 Mar 2024 11:56:10 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2f9dc02
Thu 28 Mar 2024 11:58:42 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
51008d2
Fri 29 Mar 2024 12:00:44 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:13: error: ‘List’ {aka ‘struct List’} has no member named ‘currnet’; did you mean ‘current’?
   52 |   if (list->currnet != NULL || list->currnet->next != NULL){
      |             ^~~~~~~
      |             current
list.c:52:38: error: ‘List’ {aka ‘struct List’} has no member named ‘currnet’; did you mean ‘current’?
   52 |   if (list->currnet != NULL || list->currnet->next != NULL){
      |                                      ^~~~~~~
      |                                      current
Compilation failed
5c13f02
Fri 29 Mar 2024 12:00:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:38: error: ‘List’ {aka ‘struct List’} has no member named ‘currnet’; did you mean ‘current’?
   52 |   if (list->current != NULL || list->currnet->next != NULL){
      |                                      ^~~~~~~
      |                                      current
Compilation failed
f2f8d59
Fri 29 Mar 2024 12:00:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c41c7f
Fri 29 Mar 2024 12:01:49 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
08ab820
Fri 29 Mar 2024 12:08:21 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f58569e
Fri 29 Mar 2024 12:09:12 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3a4a3b2
Fri 29 Mar 2024 12:11:10 AM UTC: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:63:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   63 |   Node* aux = list->head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
df1d11a
